--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel="stylesheet" href="styles/portfolio.css">
 </head>
 <body class="font-open-sans">
+
     <header>
         <nav class="logo">
             <h2>Ma<span class="specific-color">r</span>y</h2>
@@ -21,6 +22,21 @@
         </ul>
         </nav>
         
+        <section id="banner">
+            <div class="banner-content">
+                <h2>Hi, I  am</h2>
+                <h1>Mary Hardy</h1>
+                <p>Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+                <div>
+                    <button class="btn">Download CV</button>
+                    <button class="btn">Contact</button>
+                </div>
+            </div>
+
+            <div class="banner-img">
+                <img src="images/hardy.png" alt="">
+            </div>
+        </section>
     </header>
 </body>
 </html>
